objects/ExtObj3__x.object
<CustomObject>
    <externalDataSource>CrosDatasource1</externalDataSource>
    <externalName>CrosDatasourceTable2</externalName>
    <fields>
        <fullName>ExtObj3Cites__c</fullName>
        <label>ExtObj3Cites</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>hyd</fullName>
                </value>
                <value>
                    <fullName>bng</fullName>
                </value>
                <value>
                    <fullName>chennai</fullName>
                </value>
                <value>
                    <fullName>atp</fullName>
                </value>
                <value>
                    <fullName>s r nagar</fullName>
                </value>
                <value>
                    <fullName>film nagar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExtObj3PickList1__c</fullName>
        <externalDeveloperName>ExtObj3PickList1Column</externalDeveloperName>
        <label>ExtObj3PickList1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>33</fullName>
                </value>
                <value>
                    <fullName>44</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>66</fullName>
                </value>
                <value>
                    <fullName>77</fullName>
                </value>
                <value>
                    <fullName>88</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExtObj3PickList2__c</fullName>
        <externalDeveloperName>ExtObj3PickList2Column</externalDeveloperName>
        <label>ExtObj3PickList2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ExtObj3</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>ExtObj3s</pluralLabel>
</CustomObject>